# Divide-Framework

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  RUN.bat  RUN_EDITOR.bat  RUN_GAME.bat  RenderDocSettings.cap  data  imgui.ini  launch.vs.json  vcpkg-configuration.json  vcpkg.json
ProjectManager/: CMakeLists.txt  CMakePresets.json  ProjectManager.cpp  ProjectManager.h  config.xml  imgui.ini  launch.vs.json  vcpkg.json
Source/: CEGUIIncludes_pch.h  CMakeLists.txt  EngineConfig.h  EngineIncludes_pch.h  EngineMain.h  ceguiIncludes.h  config.h  engineMain.cpp  engineMain.h  stdafx.h
Source/AI/: AIEntity.cpp  AIManager.cpp
Source/AI/ActionInterface/: AIProcessor.cpp  AITeam.cpp  GOAPInterface.cpp
Source/AI/Headers/: AIEntity.h  AIManager.h
Source/AI/PathFinding/: DivideCrowd.cpp  DivideRecast.cpp
Source/AI/Sensors/: AudioSensor.cpp  VisualSensor.cpp
Source/CMakeHelpers/: CXXConfig.h.in  ConfigureSanitizers.cmake  FindAVX2.cmake  GlobSources.cmake  ImportPackages.cmake
Source/CMakeHelpers/PlatformHelpers/: FindASANDLLs.cmake  OptimizeForArchitecture.cmake  ToggleVectorExtensions.cmake
Source/Core/: Application.cpp  ByteBuffer.cpp  Configuration.cpp  Console.cpp  DisplayManager.cpp  EngineTaskPool.cpp  ErrorCodes.cpp  FrameListener.cpp  GUIDWrapper.cpp  Hashable.cpp  Kernel.cpp  LoopTimingData.cpp  PlatformContext.cpp  Profiler.cpp  RingBuffer.cpp  StringHelper.cpp  TaskPool.cpp  WindowManager.cpp  XMLEntryData.cpp
Source/Core/Debugging/: DebugInterface.cpp
Source/Core/Headers/: Application.h  Application.inl  ByteBuffer.h  ByteBuffer.inl  Configuration.h  Console.h  Console.inl  DisplayManager.h  DisplayManager.inl  EngineTaskPool.h  EngineTaskPool.inl  ErrorCodes.h  FrameListener.h  GUIDWrapper.h  Hashable.h  ImGUICustomConfig.h  Kernel.h  KernelComponent.h  LoopTimingData.h  NonCopyable.h  NonMovable.h  ObjectPool.h  ObjectPool.inl  ParamHandler.h  ParamHandler.inl  PlatformContext.h  PlatformContextComponent.h  PoolHandle.h  PoolHandle.inl  Profiler.h  RingBuffer.h  StringHelper.h  StringHelper.inl  TaskPool.h  TaskPool.inl  WindowManager.h  WindowManager.inl  XMLEntryData.h
Source/Core/Math/: MathClasses.cpp  MathHelper.cpp  Transform.cpp
Source/Core/Networking/: LocalClient.cpp  Patch.cpp  Server.cpp  Session.cpp
Source/Core/Resources/: Resource.cpp  ResourceCache.cpp  ResourceCache.inl  ResourceDescriptor.cpp
Source/Core/Time/: ApplicationTimer.cpp  FrameRateHandler.cpp  ProfileTimer.cpp
Source/ECS/Components/: AnimationComponent.cpp  BoundsComponent.cpp  DirectionalLightComponent.cpp  EditorComponent.cpp  EnvironmentProbeComponent.cpp  IKComponent.cpp  NavigationComponent.cpp  NetworkingComponent.cpp  PointLightComponent.cpp  RagdollComponent.cpp  RenderingComponent.cpp  RenderingComponentState.cpp  RigidBodyComponent.cpp  SGNComponent.cpp  ScriptComponent.cpp  SelectionComponent.cpp  SpotLightComponent.cpp  TransformComponent.cpp  UnitComponent.cpp
Source/ECS/Systems/: AnimationSystem.cpp  BoundsSystem.cpp  DirectionalLightSystem.cpp  ECSManager.cpp  ECSSystem.cpp  EnvironmentProbeSystem.cpp  NavigationSystem.cpp  PointLightSystem.cpp  RenderingSystem.cpp  RigidBodySystem.cpp  SelectionSystem.cpp  SpotLightSystem.cpp  TransformSystem.cpp
Source/Editor/: Editor.cpp  UndoManager.cpp  Utils.cpp
Source/Editor/Headers/: Editor.h  Editor.inl  Sample.h  UndoManager.h  Utils.h  Utils.inl
Source/Editor/Widgets/: DockedWindow.cpp  EditorOptionsWindow.cpp  Gizmo.cpp  ImGuiExtensions.cpp  MenuBar.cpp  StatusBar.cpp
Source/Environment/Sky/: Sky.cpp  Sun.cpp
Source/Environment/Terrain/: InfinitePlane.cpp  Terrain.cpp  TerrainChunk.cpp  TerrainDescriptor.cpp  TerrainLoader.cpp  TileRing.cpp
Source/Environment/Vegetation/: Vegetation.cpp
Source/Environment/Water/: Water.cpp
Source/Executable/: main.cpp
Source/Executable/HotReloading/: HotReloadingApple.cpp  HotReloadingUnix.cpp  HotReloadingWindows.cpp
Source/GUI/: GUI.cpp  GUIButton.cpp  GUIConsole.cpp  GUIConsoleCommandParser.cpp  GUIElement.cpp  GUIInterface.cpp  GUIMessageBox.cpp  GUISplash.cpp  GUIText.cpp  GuiFlash.cpp  SceneGUIElements.cpp
Source/GUI/CEGUIAddons/: CEGUIFormattedListBox.cpp  CEGUIInput.cpp
Source/GUI/Headers/: GUI.h  GUIButton.h  GUIConsole.h  GUIConsoleCommandParser.h  GUIElement.h  GUIFlash.h  GUIInterface.h  GUIMessageBox.h  GUISplash.h  GUIText.h  SceneGUIElements.h
Source/Geometry/Animations/: AnimationEvaluator.cpp  AnimationUtils.cpp  Bone.cpp  SceneAnimator.cpp  SceneAnimatorFileIO.cpp
Source/Geometry/Importer/: DVDConverter.cpp  MeshImporter.cpp
Source/Geometry/Material/: Material.cpp  MaterialProperties.cpp  (+2 more)
Source/Graphs/: IntersectionRecord.cpp  SGNRelationshipCache.cpp  SceneGraph.cpp  SceneGraphNode.cpp  SceneNode.cpp  SceneNodeRenderState.cpp
Source/Managers/: FrameListenerManager.cpp  ProjectManager.cpp  RenderPassManager.cpp  SceneManager.cpp
Source/Networking/: ASIO.cpp  Client.cpp  Client.cpp.bak  Connection.cpp  NetworkClientImpl.cpp  NetworkClientInterface.cpp  NetworkPacket.cpp  Patch.cpp  Server.cpp  TCPUDPImpl.cpp  TCPUDPInterface.cpp  WorldPacket.cpp  tcp_session_tpl.cpp
Source/Physics/: PXDevice.cpp  PhysicsAPIWrapper.cpp  PhysicsAsset.cpp  PhysicsSceneInterface.cpp
Source/Platform/: ConditionalWait.cpp  DisplayWindow.cpp  PlatformDataTypes.cpp  PlatformDefines.cpp  PlatformDefinesApple.cpp  PlatformDefinesUnix.cpp  PlatformDefinesWindows.cpp  PlatformRuntime.cpp  SDLEventListener.cpp  SDLEventManager.cpp
Source/ProjectManager/: ProjectManager.cpp  ProjectManager.h
Source/Rendering/: Renderer.cpp
Source/Scenes/: Scene.cpp  SceneEnvironmentProbePool.cpp  SceneInput.cpp  SceneInputActions.cpp  ScenePool.cpp  SceneShaderData.cpp  SceneState.cpp
Source/Scripting/: GameScript.cpp  Script.cpp  ScriptBindings.cpp
Source/Test-Engine/: main.cpp
Source/Test-Platform/: main.cpp
Source/UnitTests/: main.cpp  unitTestCommon.cpp  unitTestCommon.h
Source/Utility/: CRC.cpp  Colours.cpp  CommandParser.cpp  EASTLImport.cpp  ImageTools.cpp  Localization.cpp  TextLabel.cpp  XMLParser.cpp
(+2891 files in other folders)
